# ai-refactoring-research

./: .gitignore  README.md
.github/workflows/: ci.yml
datasets/SWE-Refactor/code/: bm25.py  clone.sh  compile_experiment.py  config.yaml  evaluation_for_refactoring.py  handle_excel.py  jacoco_util.py  llm_refactoring.py  multiple_agent_and_rag_refactoring_main.py  multiple_agent_and_rag_refactoring_util.py  pre_process_data.py  (+4 more)
docs/: architecture.md  module-01-ast-extraction.md
modules/ast-extractor/: README.md  pyproject.toml
modules/ast-extractor/fixtures/tiny_repo/: README.md
modules/ast-extractor/src/ast_extractor/: cli.py  config.py
modules/ast-extractor/src/ast_extractor/output/: schema.py  writer.py
modules/ast-extractor/src/ast_extractor/repo/: clone.py  scan.py
modules/ast-extractor/src/ast_extractor/summary/: java_summary.py
modules/ast-extractor/src/ast_extractor/treesitter/: grammars.py  parser.py  serialize.py
modules/ast-extractor/src/ast_extractor/utils/: hashing.py  paths.py
modules/ast-extractor/tests/: test_smoke.py
results/: exp_commons_io_1p3b.jsonl  exp_commons_io_6p7b.jsonl  exp_commons_lang_1p3b.jsonl  exp_commons_lang_6p7b.jsonl  exp_commons_lang_6p7b_100.jsonl  exp_commons_lang_6p7b_200.jsonl  exp_commons_lang_codellama_10.jsonl  exp_commons_lang_deepseek_10.jsonl  exp_commons_lang_starcoder2_10.jsonl  exp_guava_1p3b.jsonl  exp_guava_6p7b.jsonl
scripts/: extract_methods_java.py  inject_method_body.py  llm_refactor_block_ollama.py  local_llm.py  replace_method_block.py  run_swe_refactor_offline.py  sanitize_block.py
(+77 files in other folders)
